--- a/index.html
+++ b/index.html
@@ -21,7 +21,43 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-offset-2 col-xs-8 col-centered">some stuff</div>
+			<div class="col-xs-12 col-md-offset-2 col-md-8 col-centered">
+				<!-- Instruction Row -->
+				<div class="row">
+					<!-- Instructions -->
+					<div class="col-xs-12">
+						<p></p>
+					</div>
+				</div>
+				<!-- Gem Row -->
+				<div class="row">
+					<!-- Gem # 1 -->
+					<div class="col-xs-3">
+						<img src="">
+					</div>
+					<!-- Gem # 2 -->
+					<div class="col-xs-3">
+						<img src="">
+					</div>
+					<!-- Gem # 3 -->
+					<div class="col-xs-3">
+						<img src="">
+					</div>
+					<!-- Gem # 4 -->
+					<div class="col-xs-3">
+						<img src="">
+					</div>
+				</div>
+				<!-- Goal, Score, Wins/Losses -->
+				<div class="row">
+					<!-- Goal -->
+					<div class="col-xs-4"></div>
+					<!-- Score -->
+					<div class="col-xs-4"></div>
+					<!-- Wins/Losses -->
+					<div class="col-xs-4"></div>
+				</div>
+			</div>
 		</div>
 	</div>
 	
