--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
 				<!-- Gem Row -->
 				<div class="row">
 					<!-- Gem # 1 -->
-					<div class="col-xs-3">
-						<img src="">
+					<div id="gem1" class="gems col-xs-3">
+						<img src="assets/images/aqua-gem.jpg" />
 					</div>
 					<!-- Gem # 2 -->
-					<div class="col-xs-3">
-						<img src="">
+					<div id="gem2" class="gems col-xs-3">
+						<img src="assets/images/dkpink-gem.jpg" />
 					</div>
 					<!-- Gem # 3 -->
-					<div class="col-xs-3">
-						<img src="">
+					<div id="gem3" class="gems col-xs-3">
+						<img src="assets/images/green-gem.jpg" />
 					</div>
 					<!-- Gem # 4 -->
-					<div class="col-xs-3">
-						<img src="">
+					<div id="gem4" class="gems col-xs-3">
+						<img src="assets/images/dkred-gem.jpg" />
 					</div>
 				</div>
 				<!-- Goal, Score, Wins/Losses -->
