score tracking styled on page

--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
 				<!-- Goal, Score, Wins/Losses -->
 				<div class="row">
 					<!-- Goal -->
-					<div class="col-xs-4"></div>
+					<div id="goal" class="keep col-xs-4">
+						<h2>Goal:</h2>
+					</div>
 					<!-- Score -->
-					<div class="col-xs-4"></div>
+					<div id="score" class="keep col-xs-4">
+						<h2>Score:</h2>
+					</div>
 					<!-- Wins/Losses -->
-					<div class="col-xs-4"></div>
+					<div id="win_losses" class="keep col-xs-4">
+						<h2>Wins: 0</h2>
+						<h2>Losses: 0</h2>
+					</div>
 				</div>
 			</div>
 		</div>
