initial js script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- jQuery CDN -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- custom Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Lakki+Reddy" rel="stylesheet">
 	<!-- Our custom CSS style sheet -->
@@ -38,19 +40,19 @@
 				<!-- Gem Row -->
 				<div class="row">
 					<!-- Gem # 1 -->
-					<div id="gem1" class="gems col-xs-3">
+					<div id="1" class="gems col-xs-3">
 						<img src="assets/images/aqua-gem.jpg" />
 					</div>
 					<!-- Gem # 2 -->
-					<div id="gem2" class="gems col-xs-3">
+					<div id="2" class="gems col-xs-3">
 						<img src="assets/images/dkpink-gem.jpg" />
 					</div>
 					<!-- Gem # 3 -->
-					<div id="gem3" class="gems col-xs-3">
+					<div id="3" class="gems col-xs-3">
 						<img src="assets/images/green-gem.jpg" />
 					</div>
 					<!-- Gem # 4 -->
-					<div id="gem4" class="gems col-xs-3">
+					<div id="4" class="gems col-xs-3">
 						<img src="assets/images/dkred-gem.jpg" />
 					</div>
 				</div>
