--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 				<!-- Gem Row -->
 				<div class="row">
 					<!-- Gem # 1 -->
-					<div id="1" class="gems col-xs-3">
+					<div id="gem0" class="gems col-xs-3">
 						<img src="assets/images/aqua-gem.jpg" />
 					</div>
 					<!-- Gem # 2 -->
-					<div id="2" class="gems col-xs-3">
+					<div id="gem1" class="gems col-xs-3">
 						<img src="assets/images/dkpink-gem.jpg" />
 					</div>
 					<!-- Gem # 3 -->
-					<div id="3" class="gems col-xs-3">
+					<div id="gem2" class="gems col-xs-3">
 						<img src="assets/images/green-gem.jpg" />
 					</div>
 					<!-- Gem # 4 -->
-					<div id="4" class="gems col-xs-3">
+					<div id="gem3" class="gems col-xs-3">
 						<img src="assets/images/dkred-gem.jpg" />
 					</div>
 				</div>
