--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 				<div class="row">
 					<!-- Goal -->
 					<div id="goal" class="keepTrack col-xs-4">
-						<h2>Goal:</h2>
+						<h2 class="margin-top">Goal:</h2>
 					</div>
 					<!-- Score -->
 					<div id="score" class="keepTrack col-xs-4">
-						<h2>Score:</h2>
+						<h2 class="margin-top">Score: yup</h2>
 					</div>
 					<!-- Wins/Losses -->
 					<div id="win_losses" class="keepTrack col-xs-4">
