changed wording of instructions

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 					<!-- Instructions -->
 					<div class="instructions col-xs-12">
 						<ul style="list-style: none;">
-							<li>You will be given a random number at the start of the game.</li>
+							<li>You will be given a random numerical goal at the start of the game.</li>
 							<li>There are four crystals below. By clicking on a crystal you will add a specified amount of points to your score.</li>
-							<li>The value of each crystal is hidden from you until you click on it and you see the increase in your score.</li>
+							<li>The value of each crystal is hidden from you until you click on it and you see the value reflected in the increase in your score.</li>
 							<li>You win the game by matching your score to the goal. You will lose if your total score exceeds the goal.</li>
-							<li>Each time the game starts again, the game will change the value of the crystals.</li>
+							<li>Each time the game starts again, the game will give you a new goal and will change the value of the crystals.</li>
 						</ul>
 					</div>
 				</div>
